Fix transform filtering, enrich errors, and clean up return types allowed from each action type